# opengles3-demo

./: .gitignore
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/example/andy/openglesdemo/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni_lib.cpp
android/app/src/main/java/example/andy/openglesdemo/: GLActivity.java  GLJNILib.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/test/java/example/andy/openglesdemo/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
common/render/: cube_render.cpp  gl_render.cpp  gl_render.h  gl_render_factory.cpp  gl_render_factory.h  gl_render_utils.cpp  gl_render_utils.h  texture_simple_render.cpp  triangle_ebo_render.cpp  triangle_mapbuffer_render.cpp  triangle_render.cpp  triangle_render_ebo.cpp  triangle_render_mapbuffer.cpp  triangle_render_vao.cpp  triangle_render_vbo.cpp  triangle_vao_render.cpp  triangle_vbo_render.cpp
ios/OpenGLESDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
ios/OpenGLESDemo.xcodeproj/: project.pbxproj
ios/OpenGLESDemo.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
ios/OpenGLESDemoTests/: OpenGLESDemoTests.m
ios/OpenGLESDemoUITests/: OpenGLESDemoUITests.m
